polyfill date to sync client time
