# pkg/streamplace/servergetServerTime.go
@@ -1,0 +1,29 @@
+// Code generated by cmd/lexgen (see Makefile's lexgen); DO NOT EDIT.
+
+package streamplace
+
+// schema: place.stream.server.getServerTime
+
+import (
+	"context"
+
+	"github.com/bluesky-social/indigo/lex/util"
+)
+
+// ServerGetServerTime_Output is the output of a place.stream.server.getServerTime call.
+type ServerGetServerTime_Output struct {
+	// serverTime: Current server time in RFC3339 format
+	ServerTime string `json:"serverTime" cborgen:"serverTime"`
+}
+
+// ServerGetServerTime calls the XRPC method "place.stream.server.getServerTime".
+func ServerGetServerTime(ctx context.Context, c util.LexClient) (*ServerGetServerTime_Output, error) {
+	var out ServerGetServerTime_Output
+
+	params := map[string]interface{}{}
+	if err := c.LexDo(ctx, util.Query, "", "place.stream.server.getServerTime", params, nil, &out); err != nil {
+		return nil, err
+	}
+
+	return &out, nil
+}
